--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme
+
+navbar:
+  title: "Dale T. Clement"
+  right:
+    - text: "Mome"
+      href: index.md
+    - text: "Research"
+      href: Research.md
