--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@ remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme
 
-navbar:
+sidebar:
   title: "Dale T. Clement"
   right:
-    - text: "Mome"
+    - text: "Home"
       href: index.md
     - text: "Research"
       href: Research.md
