--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url: "DaleTClement.github.io" # the base hostname & protocol for your site, e.g.
 github_username:  DaleTClement
 
 # Build settings
-remote_theme: pages-themes/slate@v0.2.0
+# remote_theme: pages-themes/slate@v0.2.0
 
 
 # Exclude from processing.
