--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ github_username:  DaleTClement
 
 # Build settings
 # remote_theme: pages-themes/slate@v0.2.0
-
+theme: jekyll-theme-minimal
 
 # Exclude from processing.
 # The following items will not be processed, by default.
