--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ title: DaleTClement
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Description Placeholder.
+repository: DaleTClement/DaleTClement.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "DaleTClement.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  DaleTClement
