--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,9 @@ url: "DaleTClement.github.io" # the base hostname & protocol for your site, e.g.
 github_username:  DaleTClement
 
 # Build settings
+plugins:
+  - jekyll-remote-theme
+
 remote_theme: pages-themes/slate@v0.2.0
 #theme: jekyll-theme-minimal
 
