--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ github_username:  DaleTClement
 plugins:
   - jekyll-remote-theme
 
-remote_theme: pages-themes/slate@v0.2.0
-#theme: jekyll-theme-minimal
+#remote_theme: pages-themes/slate@v0.2.0
+theme: jekyll-theme-minimal
 
 # Exclude from processing.
 # The following items will not be processed, by default.
