--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: DaleTClement
+title: Dale Clement
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Description Placeholder.
@@ -33,6 +33,10 @@ plugins:
 
 #remote_theme: pages-themes/slate@v0.2.0
 theme: jekyll-theme-minimal
+
+nav_pages:
+    - index.md
+    - Research.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
