--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ minima:
   #     * url      Full URL of social profile.
   social_links:
     - title: ORCID
-      icon orcid
+      icon: orcid
       url: "https://orcid.org/0000-0001-7327-3323"
     - title: LinkedIn
       icon: linkedin
